# Homework30_Django_Auth_Permissions

./: README.md  manage.py  pyproject.toml  utils.py
Homework30_Django_Auth_Permissions/: asgi.py  settings.py  urls.py  wsgi.py
ads/: models.py  permissions.py  serializers.py
ads/migrations/: 0001_initial.py  0002_initial.py
authentication/: models.py  permissions.py  serializers.py  views.py
authentication/migrations/: 0001_initial.py
fixtures/: user.json
locations/migrations/: 0001_initial.py
selections/migrations/: 0001_initial.py
